--- a/index.html
+++ b/index.html
@@ -5,6 +5,57 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <img src="graduates.png" width="550" height="200">
+	 <hr>
+	<h1> Computer Science and Robotics Teacher </h1>
+	  <br>
+	 <p>Star Academy for the Gifted and Talented</p>
+     
+	  <br>
+	  Wellesley, MA
+      Quick Apply:
+	  <br>
+       <hr>
+	   <h2>Job Description</h2>
+	   <br>
+	   About us
+       Star Academy for the Gifted and Talented is the place for the brightest
+	   students looking for a rigorous curriculum and individual approach.
+	   Our dedicated teachers are exceptionally knowledgeable, passionate about their work,
+	   and motivated to share their knowledge with your child. 
+	   We pride ourselves on identifying and nurturing talent
+	   in every learner and invite you to be part of our community of learners, parents, caregivers and teachers.
+	  <strong> Star Academy for the Gifted and Talented is seeking a Computer Science and Robotics Teacher
+	   for its Science department.</strong>
+	  <br>
+	   <h2> Responsibilities:</h2>
+         <p>-  Teach Computer Science and Robotics to students.
+		 <br>
+         -  Prepare and deliver rigorous and engaging lesson plans that follow an advanced curriculum.
+		 <br>
+         - Instruct students in a clear and concise way.
+		 <br>
+         - Track and record student progress for report cards and parent-teacher conferences.
+		 <br>
+         - Communicate with parents regarding their child's performance.
+		 <br>
+         - Provide additional support outside of the classroom for struggling students.
+		 <br>
+         - Build strong relationships with your students and aid in the strengthening of
+		  their self-confidence and motivation while inspiring them to achieve high goals.</p>
+		  <h2> Job Skills and Qualifications</h2>
+           <p>
+		   - 3+ years of teaching experience.
+		   <br>
+           - An advanced degree: Master’s, Ph.D, or Ed.D.
+		   <br>
+           - Experience teaching AP classes..
+		   <br>
+           - Passion for subject/content area.
+		   <br>
+           - Ability to communicate effectively with students, colleagues and staff.
+		    <br>
+           - Flexibility and high adaptation skills to work successfully in an unpredictable school setting.</p>
     <script src="script.js"></script>
   </body>
 </html>
