--- a/index.html
+++ b/index.html
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <title>Internet</title>
+    <title>Computer Science</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
-    <body>
-	    <style>
-		h1 {color:blue;}
-		</style>
-		<h1>The Internet</h1>
-		  <hr>   
-		  <img src="images.jpg" width="700" height="400">
-		 <h3> The internet is a system of interconnected computer networks that all use the same protocols (rules) to communicate.</h3>
-         <h2>Definition</h2>
-        <p><em>
-		A global computer network providing a variety of information and communication facilities,
-		consisting of interconnected networks using standardized communication protocols.
-		</em></p>
-		<h2>Examples</h2>
-		<p><em>The Internet carries many applications and services,
-		most prominently the World Wide Web, including social media, electronic mail, mobile applications, 
-		multiplayer online games, Internet telephony, file sharing, and streaming media services.</em></p>
-		<h2>History of the internet</h2>
-		<img src="download.jpg" width="800" height="400">
-		<p><em> ARPANET was created in 1969 and provided the
-		foundation for what came 
-		to be known as the Internet. The term Internet became widely used to
-		describe the concept of a worldwide network or connected networks in 1982. 
-		E-mail systems date back to the mid-1960s and predate
-		ARPANET and the<a href="https://en.wikipedia.org/wiki/Internet"><b> Internet</b><a/>.</em></p>
-        <hr>
-		<p>by Anastasiia</p>
-   <body>      
+  <body>
+     <style>
+	 h1 {color:purple;}
+	 </style>
+    <img src="graduates.png" width="900" height="250">
+	 <hr>
+	<h1> Computer Science and Robotics Teacher </h1>
+	 <p>Star Academy for the Gifted and Talented  <a href="https://staracademyboston.com/">Visit staracademyboston.com</a>
+	 <br>
+	  Wellesley, MA
+	  <br>
+     <em>Quick Apply:</em> <a href="https://www.indeed.com/cmp/Star-Academy-For-the-Gifted-and-Talented-1">Visit indeed.com</a>
+      </p>
+       <hr>
+	   <h2>Job Description</h2>
+	  <h3> About us</h3>
+       <p>Star Academy for the Gifted and Talented is the place for the brightest
+	   students looking for a rigorous curriculum and individual approach.
+	   <em>Our dedicated teachers are exceptionally knowledgeable, passionate about their work,</em>
+	   and motivated to share their knowledge with your child. 
+	   We pride ourselves on identifying and nurturing talent
+	   in every learner and invite you to be part of our community of learners, parents, caregivers and teachers.
+	  <strong> Star Academy for the Gifted and Talented is seeking a Computer Science and Robotics Teacher
+	   for its Science department.</strong></p>
+	   <h2> Responsibilities:</h2>
+         <p><strong>-  Teach Computer Science and Robotics to students.</strong>
+		 <br>
+        <em> -  Prepare and deliver rigorous and engaging lesson plans that follow an advanced curriculum.</em>
+		 <br>
+         <em>- Instruct students in a clear and concise way.</em>
+		 <br>
+         - Track and record student progress for report cards and parent-teacher conferences.
+		 <br>
+         - Communicate with parents regarding their child's performance.
+		 <br>
+         - Provide additional support outside of the classroom for struggling students.
+		 <br>
+         - Build strong relationships with your students and aid in the strengthening of
+		  their self-confidence and motivation while inspiring them to achieve high goals.</p>
+		  <h2> Job Skills and Qualifications</h2>
+           <p>
+		   <strong> - 3+ years of teaching experience.</strong>
+		   <br>
+          <em> - An advanced degree: Master’s, Ph.D, or Ed.D.</em>
+		   <br>
+          <em> - Experience teaching AP classes..</em>
+		   <br>
+           - Passion for subject/content area.
+		   <br>
+           - Ability to communicate effectively with students, colleagues and staff.
+		    <br>
+           - Flexibility and high adaptation skills to work successfully in an unpredictable school setting.</p>
+		   <br>
+    <script src="script.js"></script>
+  </body>
 </html>
